--- a/resources/style.css
+++ b/resources/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Pangolin&family=Rubik+Glitch&display=swap');
 
+:root
+{
+  --color: black;
+  --background: #ccc;
+}
+
 *
 {
   box-sizing: border-box;
@@ -15,9 +21,17 @@
   touch-action: none;
 }
 
+body
+{
+  background-color: var( --background );
+}
+
 #global--bodyLayer-container
 {
   box-shadow: 0px 0px 8px 5px rgba(34, 60, 80, 0.2) inset;
+
+  backdrop-filter: brightness(1.05);
+
 
   background: linear-gradient( #bbb, transparent 1px), linear-gradient( 90deg, #bbb, transparent 1px);
   background-size: 20px 20px;
